--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "directories": {
         "example": "examples"
     },
-    "dependencies": {
-        "crypto-js": "^4.0.0"
-    },
+    "dependencies": {},
     "devDependencies": {
         "grunt": "^1.0",
         "grunt-check-modules": "^1.0.0",
